[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
version = "0.0.0"
name = "mcts"
requires-python = ">=3.10,<3.12"
dependencies = [
    "jax==0.4.38",
    "equinox==0.11.11",
    "optax==0.2.4",
    "mctx==0.0.5"
]

[project.optional-dependencies]
notebooks = [
    "mediapy==1.2.2"
]

[tool.setuptools.packages.find]
include = ["mcts"]