[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
version = "0.0.0"
name = "mcts"
requires-python = ">=3.10,<3.12"
dependencies = [
    "jax==0.4.38",
    "equinox==0.11.11",
    "optax==0.2.4",
    "mctx==0.0.5",
    "gymnax==0.0.8",
    "wandb[media]==0.19.8"
]

[tool.setuptools.packages.find]
include = ["mcts"]